fix error dialog on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -125,8 +125,8 @@ h6 {
 
 .dialog-overlay .dialog-context {
   background-color: var(--color-white);
-  width: 31.25rem;
-  height: 15.625rem;
+  max-width: 31.25rem;
+  max-height: 15.625rem;
   position: absolute;
   top: 50%;
   left: 50%;
